--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <main class="container">
         <h1>Ori QA</h1>
         <div class="profile-images">
-            <img src="images/Ani1.jpg" alt="A photo of Ori Apt" class="profile-img"/>
-            <img src="images/Ani4.jpg" alt="A photo of Ori Apt" class="profile-img"/>
-            <img src="images/Ani2.jpg" alt="A photo of Ori Apt" class="profile-img"/>
+            <img src="images/ani1.jpg" alt="A photo of Ori Apt" class="profile-img"/>
+            <img src="images/ani4.jpg" alt="A photo of Ori Apt" class="profile-img"/>
+            <img src="images/ani2.jpg" alt="A photo of Ori Apt" class="profile-img"/>
         </div>
         
         <section id="my-projects">
