--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
     <main class="container">
         <h1>My Projects</h1>
         <div class="projects-list">
-            <p>• <a href="index.html" target="_blank" rel="noopener noreferrer">This HTML Portfolio</a> *Used AI Prompts for Advanced:HTML+CSS+JS</p>
+            <p>• This HTML Portfolio *Used AI Prompts for Advanced:HTML+CSS+JS</p>
             <p>• More exciting Projects to come soon!</p>
         </div>
         <a href="index.html" class="cta-button">Back to main page!</a>
