--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,8 @@
         <h1>My Projects</h1>
         <div class="projects-list">
             <p>• This HTML Portfolio *Used AI Prompts for Advanced:HTML+CSS+JS</p>
-            <p>• More exciting Projects to come soon!</p>
+			<p>• <a href="https://elgabor1.github.io/Bella">Bella's Kingdom *Used Template & AI Prompts for Advanced:HTML+CSS+JS</a></p>
+			<p>• More exciting Projects to come soon!</p>
         </div>
         <a href="index.html" class="cta-button">Back to main page!</a>
         
