--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1>Ori QA</h1>
         <div class="profile-images">
             <img src="images/ani1.jpg" alt="A photo of Ori Apt" class="profile-img"/>
-            <img src="images/an.jpg" alt="A photo of Ori Apt" class="profile-img"/>
+            <img src="images/ani3.jpg" alt="A photo of Ori Apt" class="profile-img"/>
             <img src="images/ani2.jpg" alt="A photo of Ori Apt" class="profile-img"/>
         </div>
         
